[gd_scene load_steps=4 format=3 uid="uid://bndtclt51nsih"]

[ext_resource type="Script" path="res://scenes/interface.gd" id="1_5p24o"]
[ext_resource type="Texture2D" uid="uid://jyrl33rv1fnp" path="res://ressources/images/full_heart.svg" id="2_opn3r"]
[ext_resource type="Texture2D" uid="uid://cy7cv4qcmyyol" path="res://ressources/images/empty_slot.svg" id="3_8aruj"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_5p24o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="TextureRect1" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_opn3r")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_opn3r")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_opn3r")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_opn3r")
expand_mode = 1

[node name="TextureRect5" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_opn3r")
expand_mode = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer2"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("3_8aruj")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("3_8aruj")
expand_mode = 1

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
